--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
     <main class="container">
 
-        <section class="secao01">
+        <section class="sessao01">
 
-            <div class="corpo_secao01">
+            <div class="corpo_sessao01">
                 <div class="titulo">
                     <h3>Mais Chat plataforma de atendimento personalizado.</h3>
                 </div>
@@ -50,7 +50,7 @@
 
         </section>
 
-        <section class="secao02">
+        <section class="sessao02">
             <div class="titulo_simples">
                 <h4>Dynamic team of creative people, Innovation and Degital marketing expert.</h4>
             </div>
@@ -62,23 +62,23 @@
 
         </section>
 
-        <section class="secao03">
+        <section class="sessao03">
             <div class="card_">
-                <img src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
+                <img class="img_card" src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
                 <h5>Marketing</h5>
                 <p>Lorem ipsum dolor sit amet sit amet.</p>
                 <a href="#" class="link">Saiba Mais</a>
             </div>
 
             <div class="card_">
-                <img src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
+                <img class="img_card" src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
                 <h5>Marketing</h5>
                 <p>Lorem ipsum dolor sit amet sit amet.</p>
                 <a href="#" class="link">Saiba Mais</a>
             </div>
 
             <div class="card_">
-                <img src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
+                <img class="img_card" src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
                 <h5>Marketing</h5>
                 <p>Lorem ipsum dolor sit amet sit amet.</p>
                 <a href="#" class="link">Saiba Mais</a>
@@ -86,7 +86,7 @@
 
         </section>
 
-        <section class="secao04">
+        <section class="sessao04">
             <div>
                 <h4>Lorem ipsum dolor sit amet, adipiscing elit</h4>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
@@ -98,12 +98,12 @@
                 <a href="#" class="link">Saiba Mais</a>
             </div>
             <div>
-                <img class="img_secao04" src="https://editor.liramail.com/images/grapestheme/spirit/about-1.png" alt="">
+                <img class="img img_mobile" src="https://editor.liramail.com/images/grapestheme/spirit/about-1.png" alt="">
             </div>
 
         </section>
 
-        <section class="secao05">
+        <section class="sessao05">
             <div>
                 <h3>We Are Specialized in the Following Services</h3>
                 <p>Lorem ipsum dolor sit consectetur adipiscing elit.
@@ -112,16 +112,16 @@
 
         </section>
 
-        <section class="secao06">
+        <section class="sessao06">
             <div>
                 <div class="card_">
-                    <img src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
+                    <img class="img_card" src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
                     <h5>Marketing</h5>
                     <p>Lorem ipsum dolor sit amet sit amet.</p>
                     <a href="#" class="link">Saiba Mais</a>
                 </div>
                 <div class="card_">
-                    <img src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
+                    <img class="img_card" src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
                     <h5>Marketing</h5>
                     <p>Lorem ipsum dolor sit amet sit amet.</p>
                     <a href="#" class="link">Saiba Mais</a>
@@ -129,18 +129,18 @@
             </div>
 
             <div>
-                <img style="width:100%" src="https://editor.liramail.com/images/grapestheme/spirit/about-2.png" alt="">
+                <img class="ocultar img" src="https://editor.liramail.com/images/grapestheme/spirit/about-2.png" alt="">
             </div>
 
             <div>
                 <div class="card_">
-                    <img src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
+                    <img class="img_card" src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
                     <h5>Marketing</h5>
                     <p>Lorem ipsum dolor sit amet sit amet.</p>
                     <a href="#" class="link">Saiba Mais</a>
                 </div>
                 <div class="card_">
-                    <img src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
+                    <img class="img_card" src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png" alt="">
                     <h5>Marketing</h5>
                     <p>Lorem ipsum dolor sit amet sit amet.</p>
                     <a href="#" class="link">Saiba Mais</a>
@@ -149,7 +149,7 @@
 
         </section>
 
-        <section class="secao07">
+        <section class="sessao07">
             <div>
                 <h3>We Are Specialized in the Following Services</h3>
                 <p>Lorem ipsum dolor sit consectetur adipiscing elit.
@@ -158,12 +158,12 @@
 
         </section>
 
-        <section class="secao08">
+        <section class="sessao08">
             <div>
-                <img class="img" src="https://editor.liramail.com/images/grapestheme/spirit/about-3.png" alt="">
+                <img class="img img_sessao08" src="https://editor.liramail.com/images/grapestheme/spirit/about-3.png" alt="">
             </div>
 
-            <div class="card_secao08">
+            <div class="card_sessao08">
                 <div class="card_float">
                     <img class="img_float" src="https://editor.liramail.com/images/grapestheme/spirit/icon-1.png"
                         alt="">
