--- a/index.html
+++ b/index.html
@@ -52,6 +52,34 @@
                     href="#" role="button">Contato</a>
             </div>
         </div>
+
+            <table>
+                <tr>
+                    <td width="40%" cellspacing="10">
+                        <img style="width: 100%; border-radius: 10px 10px 0px 0px" src="	https://maischat.com/assets/img/blog/18.jpg" alt="">
+                <div style="padding: 1rem;">
+                    <h5>Mais Chat ou WhatsApp Business?</h5>
+                    <p>O WhatsApp Business é um aplicativo gratuito desenvolvido pela META para atender pequenas
+                        empresas ou lojistas com apenas uma loja, Entretanto, com o crescimento no número das vendas
+                        através do chat, o uso do WhatsApp tem se popularizado cada vez mais entre marcas e clientes.
+                    </p>
+                    <a style="text-decoration: none; color: green;" href="https://maischat.com/blog/maischatouwhatsapp.html">Saiba Mais</a>
+
+                    </td>
+                    
+                    <td width="40%" cellspacing="10">
+                        <img style="width: 100%; border-radius: 10px 10px 0px 0px" src="	https://maischat.com/assets/img/blog/18.jpg" alt="">
+                <div style="padding: 1rem;">
+                    <h5>Mais Chat ou WhatsApp Business?</h5>
+                    <p>O WhatsApp Business é um aplicativo gratuito desenvolvido pela META para atender pequenas
+                        empresas ou lojistas com apenas uma loja, Entretanto, com o crescimento no número das vendas
+                        através do chat, o uso do WhatsApp tem se popularizado cada vez mais entre marcas e clientes.
+                    </p>
+                    <a style="text-decoration: none; color: green;" href="https://maischat.com/blog/maischatouwhatsapp.html">Saiba Mais</a>
+
+                    </td>
+                </tr>
+            </table>
         <div style="display: grid; grid-template-columns: 1fr 1fr; padding: 1rem 1rem; ">
             <div style=" border: 1px solid rgba(128, 128, 128, 0.404); border-radius: 10px; margin: 10px;">
                 <img style="width: 100%; border-radius: 10px 10px 0px 0px" src="	https://maischat.com/assets/img/blog/18.jpg" alt="">
