--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div style="width:600px; margin-top: 1rem;
     background-color: white; border: 1px solid grey; padding: 0;
 " class="container">
-        <div style="text-align: center;">
+        <div style="text-align: center; background-color: #F3F5F7;">
             <img style="width: 40%; padding: 2rem;"
                 src="https://maischat.com/assets/img/logo/_mais_chat_verde_cabecalho_cinza_verde.png" alt="">
         </div>
@@ -80,33 +80,7 @@
                     </td>
                 </tr>
             </table>
-        <div style="display: grid; grid-template-columns: 1fr 1fr; padding: 1rem 1rem; ">
-            <div style=" border: 1px solid rgba(128, 128, 128, 0.404); border-radius: 10px; margin: 10px;">
-                <img style="width: 100%; border-radius: 10px 10px 0px 0px" src="	https://maischat.com/assets/img/blog/18.jpg" alt="">
-                <div style="padding: 1rem;">
-                    <h5>Mais Chat ou WhatsApp Business?</h5>
-                    <p>O WhatsApp Business é um aplicativo gratuito desenvolvido pela META para atender pequenas
-                        empresas ou lojistas com apenas uma loja, Entretanto, com o crescimento no número das vendas
-                        através do chat, o uso do WhatsApp tem se popularizado cada vez mais entre marcas e clientes.
-                    </p>
-                    <a style="text-decoration: none; color: green;" href="https://maischat.com/blog/maischatouwhatsapp.html">Saiba Mais</a>
-
-                </div>
-            </div>
-            <div style=" border: 1px solid rgba(128, 128, 128, 0.404); border-radius: 10px; margin: 10px;">
-                <img style="width: 100%; border-radius: 10px 10px 0px 0px" src="	https://maischat.com/assets/img/blog/18.jpg" alt="">
-                <div style="padding: 1rem;">
-                    <h5>Mais Chat ou WhatsApp Business?</h5>
-                    <p>O WhatsApp Business é um aplicativo gratuito desenvolvido pela META para atender pequenas
-                        empresas ou lojistas com apenas uma loja, Entretanto, com o crescimento no número das vendas
-                        através do chat, o uso do WhatsApp tem se popularizado cada vez mais entre marcas e clientes.
-                    </p>
-                    <a style="text-decoration: none; color: green;" href="https://maischat.com/blog/maischatouwhatsapp.html">Saiba Mais</a>
-
-                </div>
-            </div>
-
-        </div>
+        
     </div>
 
 
