--- a/index1.html
+++ b/index1.html
@@ -148,7 +148,7 @@
                     <a href="https://www.facebook.com/maischatbr" target="_blank"><img style="width: 20px;" src="https://maischat.com/assets/img/logo/facebook.png" alt=""></a>
                     </td>
                     <td>
-                    <a href="https://www.instagram.com/maischatbr/" target="_blank"><img style="width: 20px;" src="https://maischat.com/assets/img/logo/instagram.png" alt=""></a>
+                    <a href="https://www.instagram.com/maischatbr/" target="_blank"><img style="width: 20px; margin: ;" src="https://maischat.com/assets/img/logo/instagram.png" alt=""></a>
                     </td>                    
                     <td>
                         <a href="https://wa.me/558000708000" target="_blank"><img style="width: 20px;" src="https://maischat.com/assets/img/logo/whatsapp.png" alt=""></a>
