--- a/email-01.html
+++ b/email-01.html
@@ -138,7 +138,7 @@
         </table>
 
         <footer style="display: grid; grid-template-columns: 1fr 1fr;" >
-            <div>
+            <div style="margin-left: 40px;">
                 <img style="width: 170px"
                             src="https://maischat.com/assets/img/logo/_mais_chat_verde_cabecalho_cinza_verde.png"
                             alt="">
