--- a/email-01.html
+++ b/email-01.html
@@ -71,9 +71,7 @@
 
             <div>
                 <a style="text-decoration: none; border:1px solid green; border-radius: 10px; padding: 2px; color: white; background-color: green;"
-                    href="#" role="button">Saiba Mais</a>
-                <a style="text-decoration: none; border:1px solid green; border-radius: 10px; padding: 2px; color: white; background-color: green;"
-                    href="#" role="button">Contato</a>
+                    href="https://wa.me/558000708000" role="button">Saiba Mais</a>
             </div>
         </div>
 
