--- a/email-01.html
+++ b/email-01.html
@@ -71,7 +71,7 @@
                 </div>
 
                 <div align="center">
-                    <a style="text-decoration: none; color:white; background-color:#0AC775; font-size:20px; border-radius:5px; padding: 0 15px 0 15px;"
+                    <a style="text-decoration: none; color:white; background-color:#0AC775; font-size:18px; border-radius:5px; padding: 15px 30px 15px 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
                         href="https://wa.me/558000708000">Saiba Mais</a>
 
                 </div>
