--- a/email-01.html
+++ b/email-01.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body style="background-color:rgba(255, 255, 255, 0.212)">
+<body  style="-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; width: 100%; height: 100%; margin: 0; padding: 0; background-color: #e4e4e4;">
     <div style="width:600px; margin-top: 1rem;
     background-color:rgb(253, 253, 253); padding: 0;
 " class="container">
@@ -82,7 +82,7 @@
 
             <table width="100%" cellspacing="10">
                 <tr>
-                    <td style="padding: 1rem;">
+                    <td style="padding: 1rem 0.8rem;">
                         <a href="https://maischat.com/blog/integracao_canais.html"><img style="width: 280px; border-radius: 10px 10px 0px 0px"
                             src="	https://maischat.com/assets/img/blog/post-4.jpg" alt=""></a>
                         <div style="padding: 1rem;">
@@ -95,7 +95,7 @@
                     </td>
 
                     <td style="">
-                        <a href="https://maischat.com/blog/maischatouwhatsapp.html"><img style="width: 280px; border-radius: 10px 10px 0px 0px"
+                        <a href="https://maischat.com/blog/5tendencias.html"><img style="width: 280px; border-radius: 10px 10px 0px 0px"
                             src="	https://maischat.com/assets/img/blog/post-1-1.jpeg" alt=""></a>
                         <div style="padding: 1rem;">
                             <h2>5 Tendências de Negócios para 2023</h2>
@@ -105,7 +105,7 @@
 
                             </p>
                             <a style="text-decoration: none; color: green;"
-                                href="https://maischat.com/blog/maischatouwhatsapp.html">Saiba Mais</a>
+                                href="https://maischat.com/blog/5tendencias.html">Saiba Mais</a>
 
                     </td>
                 </tr>
