--- a/email-02.html
+++ b/email-02.html
@@ -4,12 +4,10 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <!--[if gte mso 15]><xml> <o:OfficeDocumentSettings> <o:AllowPNG/> <o:PixelsPerInch>96</o:PixelsPerInch> </o:OfficeDocumentSettings> </xml><![endif]-->
-    <!--[if gte mso 9]><xml> <o:OfficeDocumentSettings> <o:AllowPNG/> <o:PixelsPerInch>96</o:PixelsPerInch> </o:OfficeDocumentSettings> </xml><![endif]-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Visualização Web</title>
+    <title>Mais Chat</title>
     <style type="text/css">
         p {
             margin: 10px 0;
@@ -294,11 +292,9 @@
                                                             <tr>
                                                                 <td bgcolor="transparent" align="center"
                                                                     style="-webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; mso-table-lspace:0pt; mso-table-rspace:0pt;">
-                                                                    <a href="https://captable.com.br/projects/quadradoexpressfollowon?utm_campaign=quadrado_express_destaques_11_01&utm_medium=email&utm_source=RD+Station"
-                                                                        title="" target="_blank"
-                                                                        style="-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%">
-                                                                        <img src="https://d335luupugsy2.cloudfront.net/cms/files/95163/1673455118/$tt3dckjhl6j"
-                                                                            alt="" width="600" border="0"
+                            
+                                                                        <img src="https://maischat.com/assets/img/logo/_mais_chat_verde_cabecalho_cinza_verde.png"
+                                                                            alt="" width="250" border="0"
                                                                             style="-ms-interpolation-mode:bicubic; border:0; line-height:100%; outline:none; display: block; max-width: 600px; height: auto;"
                                                                             class="img-max"> </a> </td>
                                                             </tr>
