--- a/email-01.html
+++ b/email-01.html
@@ -70,7 +70,7 @@
                         mais diálogos, mais negócios.</em></p>
                 </div>
 
-                <div align="center">
+                <div align="center" style="padding: 1.5rem">
                     <a style="text-decoration: none; color:white; background-color:#0AC775; font-size:18px; border-radius:5px; padding: 15px 30px 15px 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
                         href="https://wa.me/558000708000">Saiba Mais</a>
 
