--- a/email-01.html
+++ b/email-01.html
@@ -164,9 +164,9 @@
                 <tr>
                     <td align="center">
                         <div>
-                            <img style="width: 170px"
+                            <a href="https://maischat.com/"><img style="width: 170px"
                                 src="https://maischat.com/assets/img/logo/_mais_chat_verde_cabecalho_cinza_verde.png"
-                                alt="">
+                                alt=""></a>
                             <div class="vc_empty_space" style="height: 12px"><span class="vc_empty_space_inner"></span>
                             </div>
                             Av. Paulista, 1536- Bela Vista, 01310-200 São Paulo - BR
