--- a/email-04.html
+++ b/email-04.html
@@ -316,21 +316,23 @@
                                                         </table>
                                                         <table width="100%" border="0" cellspacing="0" cellpadding="0"
                                                             style="-webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; mso-table-lspace:0pt; mso-table-rspace:0pt; border-collapse:collapse !important;">
-                                                            <a href="https://maischat.com/"> <img width="100%" src="/img/cooperativa3001.jpg" alt="">
+                                                            <!-- <a href="https://maischat.com/"> <img width="100%" src="https://maischat.com/assets/img/logo/email-2.jpg" alt="">
                                                                 </a>
-                                                            <tr>
-                                                                
+                                                            <tr> -->
+
                                                                 <td bgcolor="transparent" align="left"
                                                                     style="-webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; mso-table-lspace:0pt; mso-table-rspace:0pt; font-size: 16px; line-height: 150%; font-family: Helvetica, Arial, sans-serif; color: #666666; padding: 9px 18px; word-break: break-word !important;"
                                                                     class="padding">
                                                                     
                                                                     <p style="text-align: justify; line-height: 150%;">
                                                                         <span
-                                                                            style="font-weight: 400; color: #000000; font-size: 17px;">Como você sabe, as cooperativas enfrentam desafios constantes para manterem-se relevantes e competitivas.
+                                                                            style="font-weight: 400; color: #000000; font-size: 17px;">Ao escolher uma plataforma de atendimento digital, é importante considerar alguns fatores chave
+                                                                            para garantir que você está obtendo a melhor opção para suas necessidades:
                                                                                 </strong></span></p>
                                                                     <p style="text-align: justify; line-height: 150%;">
                                                                         <span
-                                                                            style="font-weight: 400; color: #000000; font-size: 17px;">Em 2023, alguns dos maiores desafios incluem:</p>
+                                                                            style="font-weight: 400; color: #000000; font-size: 17px;"><strong>Facilidade de uso:</strong></br>
+                                                                            A plataforma deve ser fácil de usar tanto para os atendentes quanto para os clientes</span></p>
                                                                             <p style="text-align: justify; line-height: 150%;">
                                                                                 <span
                                                                                     style="font-weight: 400; color: #000000; font-size: 17px;"><strong>Integração:</strong>
