--- a/cooperativa-0902.html
+++ b/cooperativa-0902.html
@@ -316,7 +316,7 @@
                                                         </table>
                                                         <table width="100%" border="0" cellspacing="0" cellpadding="0"
                                                             style="-webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; mso-table-lspace:0pt; mso-table-rspace:0pt; border-collapse:collapse !important;">
-                                                            <a href="https://maischat.com/"> <img width="100%" src="/img/cooperativa3001.jpg" alt="">
+                                                            <a href="https://maischat.com/"> <img width="100%" src="https://conteudo.maischat.com/img/cooperativa3001.jpg" alt="">
                                                                 </a>
                                                             <tr>
                                                                 
@@ -334,11 +334,11 @@
                                                                             <p style="text-align: justify; line-height: 150%;">
                                                                                 <span
                                                                                     style="font-weight: 400; color: #000000; font-size: 14px;"><ul>
-                                                                                        <li>Adaptação à transformação digital</li>
-                                                                                        <li>Concorrência de novos players no mercado</li>
-                                                                                        <li>Falta de recursos financeiros</li>
-                                                                                        <li>Atração e retenção de talentos</li>
-                                                                                        <li>Manutenção da identidade cooperativista</li>
+                                                                                        <li style="font-weight: 400; color: #000000; font-size: 14px;">Adaptação à transformação digital</li>
+                                                                                        <li style="font-weight: 400; color: #000000; font-size: 14px;">Concorrência de novos players no mercado</li>
+                                                                                        <li style="font-weight: 400; color: #000000; font-size: 14px;">Falta de recursos financeiros</li>
+                                                                                        <li style="font-weight: 400; color: #000000; font-size: 14px;">Atração e retenção de talentos</li>
+                                                                                        <li style="font-weight: 400; color: #000000; font-size: 14px;">Manutenção da identidade cooperativista</li>
                                                                                     </ul></span></p>
 
                                                                                     <p style="text-align: justify; line-height: 150%;">
