--- a/cooperativa-0902.html
+++ b/cooperativa-0902.html
@@ -318,7 +318,7 @@
                                                         <table width="100%" border="0" cellspacing="0" cellpadding="0"
                                                             style="-webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; mso-table-lspace:0pt; mso-table-rspace:0pt; border-collapse:collapse !important;">
                                                             <a href="https://maischat.com/"> <img width="100%"
-                                                                    src="https://conteudo.maischat.com/img/img/coop0902.jpg" alt="">
+                                                                    src="https://conteudo.maischat.com/img/coop0902.jpg" alt="">
                                                             </a>
                                                             <tr>
 
